[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "dtool-dserver"
description = "dtool storage broker for accessing datasets through dserver"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"},
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "dtoolcore>=3.18.0",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/livMatS/dtool-dserver"

[project.entry-points."dtool.storage_brokers"]
DServerStorageBroker = "dtool_dserver.storagebroker:DServerStorageBroker"

[tool.flit.module]
name = "dtool_dserver"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dtool_dserver/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dtool_dserver --cov-report=term-missing"
